# ts_mtreflector

./: .gitignore  COPYRIGHT  Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.py
.github/workflows/: enforce_rebase.yaml  lint.yaml
conda/: meta.yaml
doc/: conf.py  index.rst  manifest.yaml  version_history.rst
doc/news/: DM-48352.bugfix.rst  DM-48352.misc.1.rst  DM-48352.misc.rst  DM-51109.bugfix.rst  DM-51344.bugfix.rst
python/lsst/ts/mtreflector/: __init__.py  commander.py  config_schema.py  controller.py  csc.py  mt_reflector.py  mt_reflector_csc.py
python/lsst/ts/reflector/: __init__.py  config_schema.py  reflector.py  reflector_commander.py  reflector_csc.py
tests/: test_csc.py  test_reflector.py
tests/data/config/: _init.yaml  bad_config0.yaml  bad_config1.yaml  bad_config2.yaml  bad_config3.yaml  bad_config4.yaml  bad_config5.yaml  config.yaml
ups/: ts_reflector.table
